--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -5,11 +5,7 @@
 {% block body %}
 <div class="container">
     <h1>Edit Project</h1>
-
-    {{ include('project/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('project_index') }}">back to list</a>
-
-    {{ include('project/_delete_form.html.twig') }}
+    {{ include('project/_form.html.twig') }}  
+    {{ include('project/_delete_form.html.twig') }}  
 </div>
 {% endblock %}
