--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
 <div class="container">
-    <h1>Project index</h1>
+        <h1>Project index</h1>
 
-    <table class="table">
+    <table class="table table-striped table-hover table-md shadow-lg" style="width:100%">
         <thead>
             <tr>
                 <th>Id</th>
@@ -27,10 +27,10 @@
                 <td>{{ project.startDate ? project.startDate|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ project.endDate ? project.endDate|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('project_show', {'id': project.id}) }}"><i class="fas fa-eye"></i></a>                    
+                    <a href="{{ path('project_show', {'id': project.id}) }}"><i class="fas fa-eye PurpleHaze"></i></a>                    
                 </td>
                 <td>
-                    <a href="{{ path('project_edit', {'id': project.id}) }}"><i class="fas fa-edit"></i></a>
+                    <a href="{{ path('project_edit', {'id': project.id}) }}"><i class="fas fa-edit PurpleHaze"></i></a>
                 </td>
             </tr>
         {% else %}
@@ -41,6 +41,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('project_new') }}"><i class="fas fa-plus"></i> Ajouter un projet</a>
+    <a class= "btn btn-default" href="{{ path('project_new') }}"><i class="fas fa-plus"></i> Ajouter</a>
 </div>
 {% endblock %}
