--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -3,6 +3,7 @@
         <div class="col-md-6">
             <button class="btn btn-success">{{ button_label|default('Save') }}</button>
             <a class="btn btn-secondary" href="{{ path('project_index') }}">back to list</a>
+            {# {{ include('project/_delete_form.html.twig') }} #}
             {{ form_row(form.name) }}
             {{ form_row(form.code) }}
             {{ form_row(form.startDate) }}
