--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -1,24 +1,33 @@
 {{ form_start(form) }}
     <div class="row">
-        <div class="col-md-6">
-            <button class="btn btn-success">{{ button_label|default('Save') }}</button>
-            <a class="btn btn-secondary" href="{{ path('project_index') }}">back to list</a>
+        <div class="col-md-4">            
             {# {{ include('project/_delete_form.html.twig') }} #}
             {{ form_row(form.name) }}
             {{ form_row(form.code) }}
             {{ form_row(form.startDate) }}
             {{ form_row(form.endDate) }}
+            <button class="btn btn-success">{{ button_label|default('Save') }}</button>
+            <a class="btn btn-secondary" href="{{ path('project_index') }}">back to list</a>
              
             {# {{ include('project/_delete_form.html.twig') }} #}
         </div>
         <div class="col-md-6">
-            <div class="col-sm-8 offset-2" id="exp_list" data-prototype="{{form_widget(form.Tjms.vars.prototype)|e('html_attr')}}">        
+            <div class="col-sm-12 offset-1" id="exp_list" data-prototype="{{form_widget(form.Tjms.vars.prototype)|e('html_attr')}}">        
             {% for row in form.Tjms %}        
             <div class="card mb-2">
                 <div class="card-body">
-                    <h5 class="card-title">
-                        {{ form_row(row)}}
-                    </h5>
+                    <div class="form-row">
+                        <div class="col">
+                            <h5 class="card-title">
+                                {{ form_row(row.pole)}}
+                            </h5>
+                        </div>
+                        <div class="col">
+                            <h5 class="card-title">
+                                {{ form_row(row.amount)}}
+                            </h5>
+                        </div>
+                    </div>    
                 </div>
             </div>
             {% endfor %}
