--- a/templates/collaborators/index.html.twig
+++ b/templates/collaborators/index.html.twig
@@ -4,17 +4,18 @@
 
 {% block body %}
 <div class="container">
-    <h1>Collaborators index</h1>
+    <h1>Liste des collaborateurs</h1>
 
-    <table class="table">
+    <table class="table table-striped table-hover table-md shadow-lg" style="width:100%">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>FirstName</th>
-                <th>LastName</th>
-                <th>Code_firstName</th>
+                <th>Prénom</th>
+                <th>Nom</th>
+                <th>Code</th>
                 <th>Email</th>
-                <th>actions</th>
+                <th>Voir</th>
+                <th>Editer</th>
             </tr>
         </thead>
         <tbody>
@@ -26,8 +27,10 @@
                 <td>{{ collaborator.codeFirstName }}</td>
                 <td>{{ collaborator.email }}</td>
                 <td>
-                    <a href="{{ path('collaborators_show', {'id': collaborator.id}) }}">show</a>
-                    <a href="{{ path('collaborators_edit', {'id': collaborator.id}) }}">edit</a>
+                    <a href="{{ path('collaborators_show', {'id': collaborator.id}) }}"> <i class="fas fa-eye PurpleHaze"></i></a>                    
+                </td>
+                <td>
+                    <a href="{{ path('collaborators_edit', {'id': collaborator.id}) }}"> <i class="fas fa-edit PurpleHaze"></i></a>
                 </td>
             </tr>
         {% else %}
@@ -37,7 +40,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('collaborators_new') }}">Create new</a>
+    
+    <a class= "btn btn-default" href="{{ path('collaborators_new') }}"><i class="fas fa-plus"></i> Ajouter</a>
 </div>
 {% endblock %}
