--- a/templates/pole/index.html.twig
+++ b/templates/pole/index.html.twig
@@ -4,15 +4,16 @@
 
 {% block body %}
 <div class="container">
-    <h1>Pole index</h1>
+    <h1>Liste des poles</h1>
 
-    <table class="table">
+    <table class="table table-striped table-hover table-md shadow-lg">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Code_pole</th>
-                <th>actions</th>
+                <th>Nom</th>
+                <th>Code</th>
+                <th>Voir</th>
+                <th>Editer</th>
             </tr>
         </thead>
         <tbody>
@@ -22,8 +23,10 @@
                 <td>{{ pole.name }}</td>
                 <td>{{ pole.codePole }}</td>
                 <td>
-                    <a href="{{ path('pole_show', {'id': pole.id}) }}">show</a>
-                    <a href="{{ path('pole_edit', {'id': pole.id}) }}">edit</a>
+                    <a href="{{ path('pole_show', {'id': pole.id}) }}"><i class="fas fa-eye PurpleHaze"></i></a>                    
+                </td>
+                <td>
+                    <a href="{{ path('pole_show', {'id': pole.id}) }}"><i class="fas fa-edit PurpleHaze"></i></a>
                 </td>
             </tr>
         {% else %}
@@ -33,7 +36,6 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('pole_new') }}">Create new</a>
+    <a class= "btn btn-default" href="{{ path('pole_new') }}"><i class="fas fa-plus"></i> Ajouter</a>
 </div>
 {% endblock %}
