--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -4,15 +4,16 @@
 
 {% block body %}
 <div class="container">    
-    <h1>Profile index</h1>
+    <h1>Liste des profils</h1>
 
-    <table class="table">
+    <table class="table table-striped table-hover table-md shadow-lg">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Code_profile</th>
-                <th>actions</th>
+                <th>Nom</th>
+                <th>Code</th>
+                <th>Voir</th>
+                <th>Editer</th>
             </tr>
         </thead>
         <tbody>
@@ -22,8 +23,10 @@
                 <td>{{ profile.name }}</td>
                 <td>{{ profile.codeProfile }}</td>
                 <td>
-                    <a href="{{ path('profile_show', {'id': profile.id}) }}">show</a>
-                    <a href="{{ path('profile_edit', {'id': profile.id}) }}">edit</a>
+                    <a href="{{ path('profile_show', {'id': profile.id}) }}"><i class="fas fa-eye PurpleHaze"></i></a>                   
+                </td>
+                <td>
+                    <a href="{{ path('profile_edit', {'id': profile.id}) }}"><i class="fas fa-edit PurpleHaze"></i></a>
                 </td>
             </tr>
         {% else %}
@@ -34,6 +37,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('profile_new') }}">Create new</a>
+    <a class= "btn btn-default" href="{{ path('profile_new') }}"><i class="fas fa-plus"></i> Ajouter</a>
 </div>
 {% endblock %}
