--- a/templates/profile/new.html.twig
+++ b/templates/profile/new.html.twig
@@ -3,9 +3,13 @@
 {% block title %}New Profile{% endblock %}
 
 {% block body %}
-    <h1>Create new Profile</h1>
-
-    {{ include('profile/_form.html.twig') }}
-
-    <a href="{{ path('profile_index') }}">back to list</a>
+<div class="container">
+    <div class="row">
+        <div class="colm-md-6">
+            <h1>Ajouter un profil</h1>
+            {{ include('profile/_form.html.twig') }}
+            <a href="{{ path('profile_index') }}">Retour to list</a>
+        </div>
+    </div>
+</div>    
 {% endblock %}
