--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -6,7 +6,7 @@
             {{ form_row(form.code) }}
             {{ form_row(form.startDate) }}
             {{ form_row(form.endDate) }}
-            <button class="btn btn-success">{{ button_label|default('Save') }}</button>
+            <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
             <a class="btn btn-secondary" href="{{ path('project_index') }}">back to list</a>
              
             {# {{ include('project/_delete_form.html.twig') }} #}
