--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -4,16 +4,16 @@
 
 {% block body %}
 <div class="container">
-        <h1>Project index</h1>
+        <h1>Liste des projets</h1>
 
     <table class="table table-striped table-hover table-md shadow-lg" style="width:100%">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
+                <th>Nom</th>
                 <th>Code</th>
-                <th>Start Date</th>
-                <th>End Date</th>
+                <th>Date de début</th>
+                <th>Date de fin</th>
                 <th>Voir</th>
                 <th>Editer</th>
             </tr>
