--- a/templates/tjm/index.html.twig
+++ b/templates/tjm/index.html.twig
@@ -1,19 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tjm index{% endblock %}
+{% block title %}Liste des TJM{% endblock %}
 
 {% block body %}
 <div class="container">
     <h1>Tjm index</h1>
 
-    <table class="table">
+    <table class="table table-striped table-hover table-md shadow-lg">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Amount</th>
+                <th>Montant</th>
                 <th>Pole</th>
-                <th>Project</th>
-                <th>actions</th>
+                <th>Projet</th>
+                <th>Voir</th>
+                <th>Editer</th>
             </tr>
         </thead>
         <tbody>
@@ -24,8 +25,10 @@
                 <td>{{ tjm.pole }}</td>
                 <td>{{ tjm.project }}</td>
                 <td>
-                    <a href="{{ path('tjm_show', {'id': tjm.id}) }}">show</a>
-                    <a href="{{ path('tjm_edit', {'id': tjm.id}) }}">edit</a>
+                    <a href="{{ path('tjm_show', {'id': tjm.id}) }}"><i class="fas fa-eye PurpleHaze"></i></a>                    
+                </td>
+                <td>
+                    <a href="{{ path('tjm_edit', {'id': tjm.id}) }}"><i class="fas fa-edit PurpleHaze"></i></a>
                 </td>
             </tr>
         {% else %}
@@ -35,7 +38,6 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('tjm_new') }}">Create new</a>
+    <a class= "btn btn-default" href="{{  path('tjm_new') }}"><i class="fas fa-plus"></i> Ajouter</a>
 </div>
 {% endblock %}
