--- a/templates/tjm/new.html.twig
+++ b/templates/tjm/new.html.twig
@@ -1,11 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Tjm{% endblock %}
+{% block title %}Nouveau Tjm{% endblock %}
 
 {% block body %}
-    <h1>Create new Tjm</h1>
-
-    {{ include('tjm/_form.html.twig') }}
-
-    <a href="{{ path('tjm_index') }}">back to list</a>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Ajouter un Tjm</h1>
+            {{ include('tjm/_form.html.twig') }}
+            <a href="{{ path('tjm_index') }}">Retour à la liste</a>
+        </div>
+    </div>
+</div>
+    
 {% endblock %}
