--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -385,7 +385,7 @@
             var $collectionHolder;
 
             //add new items (experience forms)
-            var $addNewItem = $('<a href="#" class="btn btn-info mt-4">Add new item</a>');        
+            var $addNewItem = $('<a href="#" class="btn btn-info mt-4">Ajouter un TJM</a>');        
 
             $(document).ready(function () {
 
@@ -451,7 +451,7 @@
 
             function addRemoveButtton($card) {
                 //create remove button
-                var $removeButton = $("<a href='#' class='btn btn-danger'>Remove</a>");
+                var $removeButton = $("<a href='#' class='btn btn-danger'>Supprimer</a>");
 
                 //appending the remove button to the card footer
                 var $cardFooter = $("<div class='card-footer'></div>").append($removeButton);
