--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -7,7 +7,7 @@
             {{ form_row(form.startDate) }}
             {{ form_row(form.endDate) }}
             <button class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
-            <a class="btn btn-secondary" href="{{ path('project_index') }}">back to list</a>
+            <a class="btn btn-secondary" href="{{ path('project_index') }}">Retour à  la liste</a>
              
             {# {{ include('project/_delete_form.html.twig') }} #}
         </div>
