--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-    <h1>Create new Project</h1>
+    <h1>Ajouter un projet</h1>
 
     {{ include('project/_form.html.twig') }}
 </div>
