--- a/templates/collaborators/edit.html.twig
+++ b/templates/collaborators/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Collaborators{% endblock %}
+{% block title %}Editer un collaborateur{% endblock %}
 
 {% block body %}
-    <h1>Edit Collaborators</h1>
-
-    {{ include('collaborators/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('collaborators_index') }}">back to list</a>
-
-    {{ include('collaborators/_delete_form.html.twig') }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Editer un collaborateur</h1>
+            {{ include('collaborators/_form.html.twig', {'button_label': 'Enregistrer'}) }}
+            <button class="btn btn-default" href="{{ path('collaborators_index') }}">Retour à la liste</button>
+            {{ include('collaborators/_delete_form.html.twig') }}
+        </div>
+    </div>
+</div>    
 {% endblock %}
