--- a/templates/pole/edit.html.twig
+++ b/templates/pole/edit.html.twig
@@ -1,13 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Pole{% endblock %}
+{% block title %}Editer un pole{% endblock %}
 
 {% block body %}
-    <h1>Edit Pole</h1>
-
-    {{ include('pole/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('pole_index') }}">back to list</a>
-
-    {{ include('pole/_delete_form.html.twig') }}
+<div class="container">
+    <div class="row col-md-6">
+    <h1>Editer un pole</h1>
+    {{ include('pole/_form.html.twig', {'button_label': 'Enregistrer'}) }}
+    <button class"btn btn-default" href="{{ path('pole_index') }}">Retour à la liste</button>
+    {{ include('pole/_delete_form.html.twig') }}    
+    </div>
+</div>
+    
 {% endblock %}
