--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Profile{% endblock %}
+{% block title %}Editer le Profil{% endblock %}
 
 {% block body %}
-    <h1>Edit Profile</h1>
-
-    {{ include('profile/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('profile_index') }}">back to list</a>
-
-    {{ include('profile/_delete_form.html.twig') }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Editer le Profil</h1>
+            {{ include('profile/_form.html.twig', {'button_label': 'Enregistrer'}) }}
+            <Button class="btn btn-default"   href="{{ path('profile_index') }}">Retour à la liste</button>
+            {{ include('profile/_delete_form.html.twig') }}
+        </div>
+    </div>
+</div>   
 {% endblock %}
