--- a/templates/tjm/edit.html.twig
+++ b/templates/tjm/edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Edit Tjm{% endblock %}
 
 {% block body %}
-    <h1>Edit Tjm</h1>
-
-    {{ include('tjm/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('tjm_index') }}">back to list</a>
-
-    {{ include('tjm/_delete_form.html.twig') }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Edit Tjm</h1>
+            {{ include('tjm/_form.html.twig', {'button_label': 'Enregistrer'}) }}
+            <button class="btn btn-default" href="{{ path('tjm_index') }}">Retour à la liste</button>
+            {{ include('tjm/_delete_form.html.twig') }}
+        </div>
+    </div>
+</div>    
 {% endblock %}
