--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,6 +86,9 @@
 
             //function calculate
 
+
+            //end of function
+
             //function slide down
             $(".child").hide();            
             $(".poleclickable").click(function(){
