--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -16,12 +16,12 @@
                     <div class="form-row">
                         <div class="col">
                             <h5 class="card-title">
-                                {{ form_row(row.pole)}}
+                                {{ form_row(TjmsForm.pole)}}
                             </h5>
                         </div>
                         <div class="col">
                             <h5 class="card-title">
-                                {{ form_row(row.amount)}}
+                                {{ form_row(TjmsForm.amount)}}
                             </h5>
                         </div>
                     </div>    
@@ -32,8 +32,8 @@
             {# {{ include('project/_delete_form.html.twig') }} #}
         </div>
         <div class="col-md-6">
-            <div class="col-sm-12 offset-1" id="exp_list" data-prototype="{{formMacros.printTjms(TjmsForm.Tjms.vars.prototype)|e('html_attr')}}">        
-            {% for row in form.Tjms %}
+            <div class="col-sm-12 offset-1" id="exp_list" data-prototype="{{formMacros.printTjms(form.Tjms.vars.prototype)|e('html_attr')}}">        
+            {% for TjmsForm in form.Tjms %}
                 {{ formMacros.printTjms(TjmsForm) }}
             {% endfor %}
         </div>
