--- a/templates/activity/show.html.twig
+++ b/templates/activity/show.html.twig
@@ -57,7 +57,7 @@
                 {% endfor %}  #}            
                 {% for pole in all %}
                     <tr class = "poleclickable colSum bg-secondary text-white" id="firstRowClickable">
-                        <td class="pole">{{ pole.0 }}</td> 
+                        <td class="poleName">{{ pole.0 }}</td> 
                         {% for calendar in calendars %} 
                             <td class="colSum">-</td>
                         {% endfor %}
