--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -6,7 +6,7 @@
 <div class="container">
         <h1>Liste des projets</h1>
 
-    <table class="table table-striped table-hover table-md shadow-lg" style="width:100%">
+    <table id="projectTable" class="table table-striped table-hover table-md shadow-lg" style="width:100%">
         <thead>
             <tr>
                 <th>Id</th>
