--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,9 +84,10 @@
         <script>
         $(document).ready(function() {
 
-                                     
-                calculateForOneRowClickable();
-                update();
+            //Initialize                       
+            calculateForOneRowClickable();
+            update();
+            autocomplete();
 
             //New function
             function calculateForOneRowClickable(){
@@ -194,27 +195,17 @@
                 });
             };     
             
-            //call functions on document Ready 
-            autocomplete();
-            //addClassEditFor();
-
-
-            
-
-            //Function Css on Tab
-            function cssOnTab(nextOrPrevious){
-                nextOrPrevious.css("background-color", "#C6E2FF");
-                nextOrPrevious.attr("contenteditable", "true");                     
-                nextOrPrevious.focus();
-                nextOrPrevious
-            }
-
-            
+                        
 
             //function
             function update(){
                 $("#activity tbody :input").on("change paste", function(e){
 
+                    //function(){
+                       
+                    //}
+
+                    
                     calculateForOneRowClickable()
                     //Update on next, previous, enter                   
                     var element = $(this);                   
@@ -223,10 +214,7 @@
                     var emptyMonth = table.column(element.closest('td')).title();              
                     var projectName = $('#projectName').text();
                     var profileName = table.row(element.parents('tr')).data()[0];                                                                                    
-                    var firstRow = element.closest('tr').next().prevUntil('tr.poleclickable').last().prev('tr').children().first().css({"background-color": "red", "border": "2px solid red"});
-                    var poleName = firstRow.text();              
-                    
-
+                    var poleName = element.closest('tr').next().prevUntil('tr.poleclickable').last().prev('tr').children().first().text();
                             
                     $.ajax({
                         url:'/activity/update',
@@ -252,9 +240,6 @@
             }
 
 
-            //Function tabNext
-            
-
             
 
             //Initialize var DataTable
@@ -265,15 +250,7 @@
                     
             });
 
-            //delete row
-             $('#activity tbody').on('click', "td.trash", function () {
-                if ( confirm( "Etes vous sûr de vouloir supprimer cette ligne ?" ) ) {
-                     table
-                        .row( $(this).parents('tr') )
-                        .remove()
-                        .draw();
-                }               
-            });
+            
             
 
             //initialization 11 colums array
@@ -373,6 +350,20 @@
                 table.column( i ).visible( true, true );               
                 }
             });
+
+
+            //delete row
+             $('#activity tbody').on('click', "td.trash", function () {
+                if ( confirm( "Etes vous sûr de vouloir supprimer cette ligne ?" ) ) {
+                     table
+                        .row( $(this).parents('tr') )
+                        .remove()
+                        .draw();
+                }               
+            });
+
+
+
         });
         </script>
         <script>
